[workspace]
members = [
    "cv",
    "cv-core",
    "cv-geom",
    "cv-pinhole",
    "cv-optimize",
    "cv-sfm",
    "akaze",
    "eight-point",
    "lambda-twist",
    "nister-stewenius",
    "vslam-sandbox",
    "kpdraw",
    "tutorial-code/chapter2-first-program",
    "tutorial-code/chapter3-akaze-feature-extraction",
    "tutorial-code/chapter4-feature-matching",
    "tutorial-code/chapter5-geometric-verification",
]

resolver = "2"

[workspace.dependencies]
arrayvec = { version = "0.7.2", default-features = false }
arrsac = "0.10.0"
bincode = "1.3.3"
bitarray = { version = "0.9.0", default-features = false }
derive_more = { version = "2.1.0", features = ["full"] }
float-ord = { version = "0.3.2", default-features = false }
hgg = "0.4.1"
image = { version = "0.25", default-features = false }
imageproc = { version = "0.25", default-features = false }
itertools = "0.14.0"
log = { version = "0.4.14", default-features = false }
nalgebra = { version = "0.30.1", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
open = "5.3.3"
palette = "0.7.6"
pretty_env_logger = "0.5.0"
rand = { version = "0.8.4", default-features = false }
rand_xoshiro = "0.6.0"
sample-consensus = "1.0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
slotmap = { version = "1.0.6", default-features = false }
space = { version = "0.17.0", default-features = false }
structopt = "0.3.26"
tempfile = "3.3.0"

[workspace.dev-dependencies]
criterion = "0.3.5"
pretty_env_logger = "0.5.0"


[profile.dev]
# The tests take a very long time without optimization.
opt-level = 1
# This is needed to reduce memory usage during compilation, or CI will fail
codegen-units = 1

[profile.bench]
# Necessary to generate flame graphs
debug = true
codegen-units = 1
lto = "fat"

[profile.release]
# Necessary to generate flame graphs
debug = true
codegen-units = 1
lto = "fat"
