[package]
name = "akaze"
version = "0.7.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "AKAZE feature extraction algorithm for computer vision"
keywords = ["keypoint", "descriptor", "vision", "sfm", "slam"]
categories = ["computer-vision", "science::robotics"]
repository = "https://github.com/rust-cv/cv"
documentation = "https://docs.rs/akaze/"
license = "MIT"
readme = "README.md"

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
# external dependencies
bitarray = { workspace = true }
derive_more = { workspace = true }
float-ord = { workspace = true }
image = { workspace = true }
log = { workspace = true }
ndarray = { version = "0.16", default-features = false }
nshare = { version = "0.10", default-features = false, features = [
    "ndarray",
    "image",
] }
primal = { version = "0.3.0", default-features = false }
rayon = { version = "1.7.0", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
space = { workspace = true }
thiserror = { version = "1.0.40", default-features = false }
wide = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = [
    "Window",
    "Performance",
], optional = true }

[dev-dependencies]
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
eight-point = { version = "0.8.0", path = "../eight-point" }
# external dev-dependencies
arrsac = { workspace = true }
bitarray = { workspace = true, features = ["space"] }
criterion = "0.3.5"
image = { workspace = true }
imageproc = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
rand_pcg = "0.3.1"

[[bench]]
name = "criterion"
harness = false

[features]
serde = ["dep:serde", "bitarray/serde"]
