[package]
name = "cv-core"
version = "0.15.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "Contains core primitives used in computer vision applications"
documentation = "https://docs.rs/cv-core/"
repository = "https://github.com/rust-cv/cv"
keywords = ["computer", "vision", "core", "cv", "photogrammetry"]
categories = [
    "algorithms",
    "computer-vision",
    "no-std",
    "science",
    "science::robotics",
]
license = "MIT"
readme = "README.md"

[features]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[dependencies]
# TODO: Fix this once alloc feature is working again.
derive_more = { workspace = true }
nalgebra = { workspace = true, features = ["std"] }
num-traits = { workspace = true }
sample-consensus = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
