[package]
name = "cv-optimize"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-geom = { version = "0.7.0", path = "../cv-geom" }
itertools = { workspace = true }
float-ord = { workspace = true }
log = { workspace = true }
