[package]
name = "cv-pinhole"
version = "0.6.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "Pinhole camera model for comptuer vision"
documentation = "https://docs.rs/cv-pinhole/"
repository = "https://github.com/rust-cv/cv"
keywords = ["computer", "vision", "pinhole", "camera", "calibration"]
categories = ["algorithms", "computer-vision", "no-std", "science::robotics"]
license = "MIT"
readme = "README.md"

[features]
default = []
alloc = []
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
derive_more = { workspace = true }
float-ord = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
cv-geom = { version = "0.7.0", path = "../cv-geom" }

[package.metadata.docs.rs]
all-features = true
