[package]
name = "cv-sfm"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"

[features]
serde-serialize = [
    "serde",
    "cv-core/serde-serialize",
    "cv-pinhole/serde-serialize",
    "bitarray/serde",
    "slotmap/serde",
    "hgg/serde",
    "hamming-lsh/serde",
    "akaze/serde",
]

[dependencies]
akaze = { version = "0.7.0", path = "../akaze" }
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-geom = { version = "0.7.0", path = "../cv-geom" }
cv-optimize = { version = "0.1.0", path = "../cv-optimize" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
eight-point = { version = "0.8.0", path = "../eight-point" }
lambda-twist = { version = "0.7.0", path = "../lambda-twist" }
# external dependencies
arrayvec = { workspace = true }
average = "0.13.1"
bitarray = { workspace = true, features = ["space"] }
conv = { version = "0.3.3", default-features = false }
float-ord = { workspace = true }
hamming-lsh = "0.3.2"
image = { workspace = true }
imageproc = { workspace = true }
itertools = { workspace = true }
hgg = { workspace = true }
log = { workspace = true }
maplit = { version = "1.0.2", default-features = false }
ply-rs = { version = "0.1.3", default-features = false }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
slotmap = { workspace = true }
space = { workspace = true }
