[package]
name = "cv"
version = "0.6.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "Batteries-included pure-Rust computer vision crate"
keywords = ["computer", "vision", "photogrammetry", "camera"]
categories = ["computer-vision"]
repository = "https://github.com/rust-cv/cv"
documentation = "https://docs.rs/cv/"
license = "MIT"
readme = "README.md"

[features]
default = [
    "alloc",
    "cv-pinhole",
    "cv-geom",
    #"cv-sfm",
    "eight-point",
    "nister-stewenius",
    "lambda-twist",
    "akaze",
    "space",
    "hnsw",
    "levenberg-marquardt",
    "arrsac",
    "bitarray",
    "image",
    "imageproc",
    "jpeg",
    "png",
    # eye is not added by default because it requires libclang-dev to be installed to build.
    # If we can figure out how to get it to build without system dependencies, it can be made default.
    # "eye",
    "ndarray-vision",
]
alloc = ["cv-pinhole/alloc", "space/alloc"]
serde-serialize = [
    "cv-core/serde-serialize",
    "cv-pinhole/serde-serialize",
    "cv-sfm/serde-serialize",
]
jpeg = ["image", "image/jpeg"]
png = ["image", "image/png"]

[dependencies]
akaze = { optional = true, version = "0.7.0", path = "../akaze" }
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-geom = { optional = true, version = "0.7.0", path = "../cv-geom" }
cv-pinhole = { optional = true, version = "0.6.0", path = "../cv-pinhole" }
cv-sfm = { optional = true, version = "0.1.0", path = "../cv-sfm" }
eight-point = { optional = true, version = "0.8.0", path = "../eight-point" }
lambda-twist = { optional = true, version = "0.7.0", path = "../lambda-twist" }
nister-stewenius = { optional = true, version = "0.1.0", path = "../nister-stewenius" }
# external dependencies
arrsac = { workspace = true, optional = true }
bitarray = { workspace = true, features = ["space"], optional = true }
eye = { version = "0.4.1", optional = true }
hgg = { workspace = true, optional = true }
hnsw = { version = "0.11.0", optional = true }
image = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }
levenberg-marquardt = { version = "0.12.0", optional = true }
ndarray-vision = { version = "0.3.0", default-features = false, optional = true }
space = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
