[package]
name = "eight-point"
version = "0.8.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "Eight-point algorithm for essential matrix estimation"
documentation = "https://docs.rs/eight-point/"
repository = "https://github.com/rust-cv/cv"
keywords = ["hartly", "zisserman", "photogrammetry", "eight", "point"]
categories = [
    "algorithms",
    "computer-vision",
    "no-std",
    "science",
    "science::robotics",
]
license = "MIT"
readme = "README.md"

[dependencies]
arrayvec = { workspace = true }
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
derive_more = { workspace = true }
float-ord = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
nalgebra = { workspace = true, features = ["rand"] }
