[package]
name = "kpdraw"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"

[dependencies]
akaze = { version = "0.7.0", path = "../akaze" }
image = { workspace = true, features = ["png", "jpeg"] }
imageproc = { workspace = true }
structopt = { workspace = true }
