[package]
name = "lambda-twist"
version = "0.7.0"
authors = [
    "Matthieu Pizenberg <matthieu.pizenberg@gmail.com>",
    "Geordon Worley <vadixidav@gmail.com>",
]
edition = "2021"
description = "p3p pose estimation given world points and feature bearings"
documentation = "https://docs.rs/lambda-twist/"
repository = "https://github.com/rust-cv/cv"
readme = "README.md"
keywords = ["p3p", "pose", "vision", "nordberg"]
categories = ["computer-vision", "algorithms", "science::robotics", "no-std"]
license = "MPL-2.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
num-traits = { workspace = true }
arrayvec = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
arrsac = { workspace = true }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
itertools = { workspace = true }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { workspace = true, features = ["small_rng"] }
