[package]
name = "nister-stewenius"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
arrayvec = { workspace = true }
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
float-ord = { workspace = true }
sample-consensus = { workspace = true }

[dev-dependencies]
itertools = { workspace = true }
nalgebra = { workspace = true }
