[package]
name = "vslam-sandbox"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"

[features]
unstable-512-bit-simd = ["bitarray/unstable-512-bit-simd"]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-geom = { version = "0.7.0", path = "../cv-geom" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
cv-sfm = { version = "0.1.0", path = "../cv-sfm", features = [
    "serde-serialize",
] }
eight-point = { version = "0.8.0", path = "../eight-point" }
lambda-twist = { version = "0.7.0", path = "../lambda-twist" }
# external dependencies
arrsac = { workspace = true }
bincode = { workspace = true }
bitarray = { workspace = true }
image = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde_json = { workspace = true }
slotmap = { workspace = true, default-features = false }
structopt = { workspace = true }
