[package]
name = "chapter3-akaze-feature-extraction"
version = "0.1.0"
authors = ["codec-abc <viot.camille@outlook.com>"]
edition = "2021"
license = "MIT"

[dependencies]
cv = { version = "0.6.0", path = "../../cv" }
image = { workspace = true }
imageproc = { workspace = true }
open = { workspace = true }
tempfile = { workspace = true }
