[package]
name = "chapter5-geometric-verification"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cv = { version = "0.6.0", path = "../../cv" }
image = { workspace = true }
imageproc = { workspace = true }
itertools = { workspace = true }
open = { workspace = true }
palette = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
tempfile = { workspace = true }
